# code-gen

./: .gitignore  MCP_USAGE.md  README.md  SKILL_SYSTEM_USAGE.md  pyproject.toml  requirements.txt
.memory_sqlite/: user_004.db
code_gen/: __init__.py  __main__.py  cli.py  client.py  config.py  cost_tracker.py  dream.py  error_recovery.py  file_changes.py  history.py  integration.py  intent_executor.py.bak  lsp.py  mcp.py  memory.py  memory_enhanced.py  memory_system.py  permissions.py  plugins.py  prompt_suggestions.py  resilient_executor.py  resilient_tools.py  security.py  session.py  skill_executor.py  skills.py  state.py
code_gen/action_node/: __init__.py  executor.py  node.py  parser.py  registry.py
code_gen/aflow/: __init__.py  evaluator.py  optimizer.py  search.py  workflow.py
code_gen/agent/: __init__.py  agent_step.py  iteration_budget.py  simple_agent.py  skills.py  smart_executor.py  smart_runner.py
code_gen/agents/: __init__.py  advanced_workflow.py  agent.py  artifact_manager.py  async_job_manager.py  blob_store.py  budget_manager.py  context_manager.py  diagnostics.py  discovery_cache.py  dynamic_workflow.py  dynamic_yaml_loader.py  enhanced_executor.py  enhanced_reflect_executor.py  event_bus.py  (+25 more)
examples/: INTEGRATED_SYSTEMS.md  advanced_workflow_example.py  agent_features_example.py  autodev_integration_example.py  context_management_example.py  demo_memory_usage.py  demo_multi_agent.py  evaluator_optimizer_example.py  features_demo.py  git_integration_example.py  guardrails_example.py  handoff_example.py  hitl_example.py  hybrid_search_demo.py  integrated_system_demo.py  karpathy_coding_example.py  knowledge_graph_demo.py  memory_example.py  multilang_demo.py  prompt_chaining_example.py  retry_diagnostics_demo.py  storage_demo.py  streaming_example.py  unified_agent_example.py  visualization_demo.py  visualization_integration_demo.py  visualization_simple_demo.py
tests/: fix_unicode.py  mcp_server_example.py  run_all_tests.py  run_tests_resilient.py  test_ai_response.py  test_all.py  test_all_features.py  test_complete_system.py  test_cost_tracker.py  test_dream.py  test_history.py  test_integration.py  test_long_memory.py  test_mcp.py  test_mcp_connection.py  test_mcp_debug.py  test_memory.py  test_memory_system.py  test_plugin.py  test_project_skills.py  test_prompt_build.py  test_resilient_demo.py  test_security.py  test_skill_executor.py  test_skills_demo.py  test_startup.py
vscode-extension/: README.md  UI更新说明.md
(+111 files in other folders)
