[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-gen"
version = "0.1.0"
description = "AI-powered code generation CLI tool with multi-agent system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Code Gen Team"}
]
keywords = ["ai", "code-generation", "cli", "multi-agent", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # CLI and UI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    
    # HTTP and API
    "httpx>=0.25.0",
    
    # AI/ML
    "anthropic>=0.8.0",
    "tiktoken>=0.5.0",
    
    # Data validation and settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Web scraping
    "beautifulsoup4>=4.12.0",
    
    # YAML processing
    "pyyaml>=6.0.0",
    
    # System and utilities
    "psutil>=5.9.0",
    "keyring>=24.0.0",
    
    # Async support
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
code-gen = "code_gen.cli:main"
cg = "code_gen.cli:main"

[project.urls]
Homepage = "https://github.com/example/code-gen"
Documentation = "https://github.com/example/code-gen#readme"
Repository = "https://github.com/example/code-gen"
Issues = "https://github.com/example/code-gen/issues"

[tool.hatch.build.targets.wheel]
packages = ["code_gen"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
